icon has changedand added some references examples

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <meta property="og:description" content="Shopping cart demo using Vuejs, Firebase and Bootstrap 4" />
     <meta property="og:image" content="https://github.com/ittus/vuejs-firebase-shopping-cart/raw/master/screenshots/screenshot1.png?raw=true" />
     <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet'>
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>VueJS Shopping Cart example</title>
+    <link rel="icon" href="infinity-logo.jpeg">
+    <title>Dunder Mifflin</title>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <!-- 0 -->
 
